.jjconflict-side-1/apps/syncthing/overlays/nishir/patch-tcproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: syncthing
spec:
  parentRefs:
    - name: nishir
      sectionName: syncthing
